--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,12 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.0.7"
+    "sass": "^1.62.1",
+    "vue": "^3.3.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.1.5",
-    "@vue/compiler-sfc": "^3.0.7",
-    "vite": "^2.1.2"
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@vue/compiler-sfc": "^3.3.2",
+    "vite": "^4.3.5"
   }
 }
